[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.8.9", features = ["os-poll", "net"]}
rand = {version = "0.8.5", features = ["small_rng"]}
log = "0.4.20"
env_logger = "0.10.1"
colored = "2.1.0"
model_state_derive = { path = "model_state_derive" }

